# CUDAimageProcessor

./: .gitignore  CMakeLists.txt  README.md  TODO.md  main_program.cpp
Actions/: ActionHandler.cpp  ActionHandler.h  actionHandler.cpp  actionHandler.h  brightnessKernel.cu  brightnessKernel.h  contrastKernel.cu  contrastKernel.h  equalizationKernel.cu  equalizationKernel.h  invertionKernel.cu  invertionKernel.h
Actions/LUTtest/: CubeLUT.cpp  CubeLUT.h  LUTapply.cpp  LUTapply.h
CodeUtils/: utils.hpp
Commands/: AllEditCmds.hpp  BaseCommand.cpp  BaseCommand.hpp  BaseEditCmd.cpp  BaseEditCmd.hpp  BaseEditCommand.cpp  BaseEditCommand.hpp  BaseGenericCmd.cpp  BaseGenericCmd.hpp
Commands/GeneralImg/: CropCmd.cpp  CropCmd.hpp  ResizeCmd.cpp  ResizeCmd.hpp
Commands/Ui/: AllCommands.hpp  ClearCmd.cpp  ClearCmd.hpp  HelpCmd.cpp  HelpCmd.hpp  HistoryCmd.cpp  HistoryCmd.hpp  LoadCmd.cpp  LoadCmd.hpp  QuitCmd.cpp  QuitCmd.hpp  RedoCmd.cpp  RedoCmd.hpp  SaveCmd.cpp  SaveCmd.hpp  ShowCmd.cpp  ShowCmd.hpp  UndoCmd.cpp  UndoCmd.hpp
Consts/: Consts.hpp
Events/: EventHistory.cpp  EventHistory.hpp  History.cpp  History.hpp
IO/: IOhandler.cpp  IOhandler.hpp
ImgHandling/: ImgInfo.cpp  ImgInfo.h  ImgLoader.cpp  ImgLoader.h
MainHandler/: Errors.hpp  MainHandler.cpp  MainHandler.h  definitions.h  mainHandler.cpp  mainHandler.h
Old/: ActionHandler.cpp  ActionHandler.h  INFO.md  brightnessKernel.cu  invertionKernel.cu
Old/LUTtest/: CubeLUT.h  LUTapply.cpp
UI/: Program.cpp  Program.hpp  UI.cpp  UI.h  UIdefinitions.h
Utilities/: ConfigChecker.cpp  ConfigChecker.h  GPUcontrol.cpp  GPUcontrol.h  GPUinfo.cpp  GPUinfo.h  configChecker.cpp  configChecker.h
include/CodeUtils/: utils.hpp
include/Commands/: AllEditCmds.hpp  BaseCommand.hpp  BaseEditCmd.hpp  BaseGenericCmd.hpp
include/Consts/: Consts.hpp  Errors.hpp  GenericEvents.hpp
include/Events/: EventHistory.hpp  History.hpp
include/IO/: IOhandler.hpp
include/ImgHandling/: ImgInfo.hpp  ImgLoader.hpp
src/: CMakeLists.txt  main.cpp
src/Commands/: BaseCommand.cpp  BaseEditCmd.cpp  BaseGenericCmd.cpp  CMakeLists.txt
src/Commands/GeneralImg/: CMakeLists.txt  CropCmd.cpp  ResizeCmd.cpp
src/Commands/GpuImg/: BrightnessCmd.cpp  CMakeLists.txt  ContrastCmd.cpp  EqualizationCmd.cpp  InvertionCmd.cpp
src/Commands/GpuImg/Kernels/: BrightnessKernel.cu  CMakeLists.txt  ContrastKernel.cu  EqualizationKernel.cu  InvertionKernel.cu  TODO.md
src/Commands/Ui/: CMakeLists.txt  ClearCmd.cpp  HelpCmd.cpp  HistoryCmd.cpp  LoadCmd.cpp  QuitCmd.cpp  RedoCmd.cpp  SaveCmd.cpp  ShowCmd.cpp  UndoCmd.cpp
src/Events/: CMakeLists.txt  EventHistory.cpp  History.cpp
src/IO/: CMakeLists.txt  IOhandler.cpp
src/ImgHandling/: CMakeLists.txt  ImgInfo.cpp  ImgLoader.cpp
src/MainHandler/: CMakeLists.txt  MainHandler.cpp
src/UI/: CMakeLists.txt  Program.cpp  ui.cpp
src/Utilities/: CMakeLists.txt  ConfigChecker.cpp  GPUControl.cpp  GPUInfo.cpp  GPUcontrol.cpp  GPUinfo.cpp  UnifiedPtr.cpp
(+29 files in other folders)
