include_directories(${INCLUDE_DIR})

add_subdirectory(${SOURCE_DIR}/Commands)
add_subdirectory(${SOURCE_DIR}/Events)
add_subdirectory(${SOURCE_DIR}/ImgHandling)
add_subdirectory(${SOURCE_DIR}/IO)
add_subdirectory(${SOURCE_DIR}/MainHandler)
add_subdirectory(${SOURCE_DIR}/UI)
add_subdirectory(${SOURCE_DIR}/Utilities)
